<resources>
    <string name="app_name">My App Porfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamers</string>
    <string name="football_scores_app">Football Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone:My Own App</string>
    <string name="action_settings">Settings</string>
</resources>
