<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E0E0F0"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_nanodegree_apps" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="35dp"
        android:text="@string/spotify_streamer"
        android:id="@+id/button1"
        android:layout_below="@+id/textView"
        android:background="#F08C35"
        android:onClick="MakeToast"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/football_scores_app"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:background="#F08C35"
        android:onClick="MakeToast"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1" />

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:background="#F08C35"
        android:onClick="MakeToast"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:background="#F08C35"
        android:onClick="MakeToast"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3" />

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:background="#F08C35"
        android:onClick="MakeToast"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:background="#F00000"
        android:textColor="#FFFFFF"
        android:onClick="MakeToast"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5" />

</RelativeLayout>
